fix business component recommended span border sticking out of container

--- a/src/style/_business.scss
+++ b/src/style/_business.scss
@@ -11,6 +11,7 @@
     border-radius: .5rem .5rem 0 0;
 
     .business--recommended {
+        border-radius: .5rem .5rem 0 0;
         background: #00ad6a;
         color: #fff;
         font-size: .75rem;
